1. Icon for expand and collapse side bar fix 2. Broker end dashboard appointment slots limited to 10 and ordered by most recent

--- a/src/app/components/main/toolbar/toolbar.scss
+++ b/src/app/components/main/toolbar/toolbar.scss
@@ -11,6 +11,9 @@ toolbar {
 			flex-grow: 1;
 		    display: flex;
 		    align-items: center;
+		    img.collapsed {
+		    	transform: rotate(180deg);
+		    }
 		    .flag-dropdown {
 		    	display: flex;
 		    	align-items: center;
